# simple-clock-rs

./: Cargo.toml  README.md
src/: main.rs
src/common/: color.rs  mod.rs
src/x/: graphics_context.rs  mod.rs  screen.rs  window.rs  window_builder.rs
