[package]
name = "simple-clock-rs"
version = "0.1.0"
authors = ["David Judge <dbiro97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
schedule_recv = "0.1.0"

[dependencies.xcb]
version = "0.9"
features = ["randr"]

[dependencies.cairo-rs]
git = "https://github.com/charlesvdv/cairo"
branch = "master"
default-features = false
features = ["xcb"]

[dependencies.cairo-sys-rs]
git = "https://github.com/charlesvdv/cairo"
branch = "master"